# clicky

./: .gitignore  LICENSE  Makefile  README  README.md  meson.build  release.sh
.github/workflows/: codeql.yml  greetings.yml  release.yml
docs/: README.md  index.html  readme.md
examples/: 01.cpp  02.cpp  03.cpp  04.cpp
include/: clicky.hpp  colors.hpp
src/: clicky.cpp
